# ragrec

./: .env.example  .gitignore  CLAUDE.md  MANIFESTO.md  Makefile  OVERNIGHT_RUN.md  README.md  main.py  pyproject.toml
.beads/: issues.jsonl
.serena/: project.yml
.serena/memories/: macbook-sync-process.md
data/sample/: .gitkeep  README.md  articles_sample.parquet  customers_sample.parquet  transactions_sample.parquet
docs/plans/: 2025-01-28-ragrec-design.md  2026-01-28-complementary-recommendations-design.md
experimental/: ranker.py
scripts/: create_rich_sample.py  create_sample_data.py  download_amazon_sample.py  load_amazon_data.py  restore_database.sh  setup_native.sh  sync_to_macbook.sh
src/ragrec/: __init__.py  cli.py
src/ragrec/api/: main.py
src/ragrec/config/: embedding_strategy.py
src/ragrec/embeddings/: __init__.py  base.py  category_behavior.py  generator.py  sequence.py  siglip.py  text_encoder.py
src/ragrec/etl/: __init__.py  behavior_embeddings.py  config.py  graph_loader.py  hm_loader.py
src/ragrec/etl/sql/: schema.sql
src/ragrec/graph/: __init__.py  client.py  queries.py  schema.py
src/ragrec/personas/: __init__.py  discovery.py  models.py
src/ragrec/recommender/: __init__.py  collaborative.py  visual.py
src/ragrec/vectorstore/: __init__.py  base.py  pgvector_store.py
tests/: __init__.py
tests/integration/: test_api.py  test_graph_queries.py  test_neo4j.py  test_pgvector.py  test_visual_recommender.py
tests/unit/: test_behavior_encoder.py  test_etl.py  test_health.py
